--- a/NUCLEO-G474RE_FMAC_FIR_DMAToIT/NUCLEO-G474RE_FMAC_FIR_DMAToIT.ioc
+++ b/NUCLEO-G474RE_FMAC_FIR_DMAToIT/NUCLEO-G474RE_FMAC_FIR_DMAToIT.ioc
@@ -16,23 +16,6 @@ Dma.FMAC_PRELOAD.0.SyncEnable=DISABLE
 Dma.FMAC_PRELOAD.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.FMAC_PRELOAD.0.SyncRequestNumber=1
 Dma.FMAC_PRELOAD.0.SyncSignalID=NONE
-Dma.FMAC_READ.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.FMAC_READ.2.EventEnable=DISABLE
-Dma.FMAC_READ.2.Instance=DMA1_Channel3
-Dma.FMAC_READ.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.FMAC_READ.2.MemInc=DMA_MINC_ENABLE
-Dma.FMAC_READ.2.Mode=DMA_NORMAL
-Dma.FMAC_READ.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.FMAC_READ.2.PeriphInc=DMA_PINC_DISABLE
-Dma.FMAC_READ.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.FMAC_READ.2.Priority=DMA_PRIORITY_HIGH
-Dma.FMAC_READ.2.RequestNumber=1
-Dma.FMAC_READ.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.FMAC_READ.2.SignalID=NONE
-Dma.FMAC_READ.2.SyncEnable=DISABLE
-Dma.FMAC_READ.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.FMAC_READ.2.SyncRequestNumber=1
-Dma.FMAC_READ.2.SyncSignalID=NONE
 Dma.FMAC_WRITE.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.FMAC_WRITE.1.EventEnable=DISABLE
 Dma.FMAC_WRITE.1.Instance=DMA1_Channel2
@@ -52,30 +35,24 @@ Dma.FMAC_WRITE.1.SyncRequestNumber=1
 Dma.FMAC_WRITE.1.SyncSignalID=NONE
 Dma.Request0=FMAC_PRELOAD
 Dma.Request1=FMAC_WRITE
-Dma.Request2=FMAC_READ
-Dma.RequestsNb=3
+Dma.RequestsNb=2
 File.Version=6
 KeepUserPlacement=true
-LPUART1.BaudRate=115200
-LPUART1.IPParameters=BaudRate
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
 Mcu.IP1=FMAC
-Mcu.IP2=LPUART1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IPNb=5
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA5
-Mcu.Pin3=PC11
-Mcu.Pin4=VP_FMAC_VS_FMAC
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_SYS_VS_DBSignals
-Mcu.PinsNb=7
+Mcu.Pin0=PA5
+Mcu.Pin1=PC11
+Mcu.Pin2=VP_FMAC_VS_FMAC
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.Pin4=VP_SYS_VS_DBSignals
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -84,9 +61,8 @@ MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.FMAC_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.FMAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -96,14 +72,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA2.Locked=true
-PA2.Mode=Asynchronous
-PA2.Signal=LPUART1_TX
-PA3.Locked=true
-PA3.Mode=Asynchronous
-PA3.Signal=LPUART1_RX
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PC11.GPIOParameters=GPIO_Speed
+PC11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC11.Locked=true
 PC11.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -116,7 +88,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32G474RETx
-ProjectManager.Example=FMAC_Adaptive_FIR_AN5305
+ProjectManager.Example=FMAC_FIR_DMAToIT
 ProjectManager.ExampleSource=MxCubeFw
 ProjectManager.FirmwarePackage=STM32Cube FW_G4 V1.3.0
 ProjectManager.FreePins=false
@@ -129,14 +101,14 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=NUCLEO-G474RE_FMAC_Adaptive_FIR_AN5305.ioc
-ProjectManager.ProjectName=NUCLEO-G474RE_FMAC_Adaptive_FIR_AN5305
+ProjectManager.ProjectFileName=NUCLEO-G474RE_FMAC_FIR_DMAToIT.ioc
+ProjectManager.ProjectName=NUCLEO-G474RE_FMAC_FIR_DMAToIT
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_FMAC_Init-FMAC-false-HAL-true,5-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_FMAC_Init-FMAC-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
