--- a/NUCLEO-G474RE_FMAC_FIR_PollingToIT/NUCLEO-G474RE_FMAC_FIR_PollingToIT.ioc
+++ b/NUCLEO-G474RE_FMAC_FIR_PollingToIT/NUCLEO-G474RE_FMAC_FIR_PollingToIT.ioc
@@ -15,11 +15,12 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
 Mcu.Pin2=PA5
-Mcu.Pin3=PC11
-Mcu.Pin4=VP_FMAC_VS_FMAC
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_SYS_VS_DBSignals
-Mcu.PinsNb=7
+Mcu.Pin3=PC8
+Mcu.Pin4=PC11
+Mcu.Pin5=VP_FMAC_VS_FMAC
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_SYS_VS_DBSignals
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -46,9 +47,13 @@ PA3.Signal=LPUART1_RX
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PC11.GPIOParameters=GPIO_Speed
-PC11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PC11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC11.Locked=true
 PC11.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Speed
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
