--- a/NUCLEO-G474RE_FMAC_FIR_PollingToIT/NUCLEO-G474RE_FMAC_FIR_PollingToIT.ioc
+++ b/NUCLEO-G474RE_FMAC_FIR_PollingToIT/NUCLEO-G474RE_FMAC_FIR_PollingToIT.ioc
@@ -12,15 +12,19 @@ Mcu.IP4=SYS
 Mcu.IPNb=5
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA5
-Mcu.Pin3=PC8
-Mcu.Pin4=PC11
-Mcu.Pin5=VP_FMAC_VS_FMAC
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_SYS_VS_DBSignals
-Mcu.PinsNb=8
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_SYS_VS_DBSignals
+Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PC8
+Mcu.Pin8=PC11
+Mcu.Pin9=VP_FMAC_VS_FMAC
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -50,10 +54,18 @@ PC11.GPIOParameters=GPIO_Speed
 PC11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC11.Locked=true
 PC11.Signal=GPIO_Output
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC8.GPIOParameters=GPIO_Speed
 PC8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC8.Locked=true
 PC8.Signal=GPIO_Output
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -108,18 +120,18 @@ RCC.I2C2Freq_Value=170000000
 RCC.I2C3Freq_Value=170000000
 RCC.I2C4Freq_Value=170000000
 RCC.I2SFreq_Value=170000000
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=170000000
 RCC.LPUART1Freq_Value=170000000
 RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLM=RCC_PLLM_DIV4
+RCC.PLLM=RCC_PLLM_DIV6
 RCC.PLLN=85
 RCC.PLLPoutputFreq_Value=170000000
 RCC.PLLQoutputFreq_Value=170000000
 RCC.PLLRCLKFreq_Value=170000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=170000000
 RCC.QSPIFreq_Value=170000000
 RCC.RNGFreq_Value=170000000
